--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.401.0",
     "next": "14.2.4",
+    "popmotion": "^11.0.5",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
