--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "popmotion": "^11.0.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0"
